# MeMaS-rust-sdk

./: Cargo.toml  README.md
.openapi-generator/: FILES
docs/: Citation.md  CitedDocument.md  CorpusType.md  CpApi.md  CreateCorpusRequest.md  CreateUser200Response.md  CreateUser400Response.md  CreateUserRequest.md  DeleteCorpusRequest.md  DpApi.md  Memorize200Response.md  Memorize400Response.md  MemorizeRequest.md  MemorizeRequestAllOf.md  NamespaceDoesNotExistError.md  NamespaceExistError.md  NamespaceIllegalNameError.md  RecallRequest.md
src/apis/: configuration.rs  cp_api.rs  dp_api.rs  mod.rs
src/models/: citation.rs  cited_document.rs  corpus_type.rs  create_corpus_request.rs  create_user_200_response.rs  create_user_400_response.rs  create_user_request.rs  delete_corpus_request.rs  memorize_200_response.rs  memorize_400_response.rs  memorize_request.rs  memorize_request_all_of.rs  mod.rs  namespace_does_not_exist_error.rs  namespace_exist_error.rs  namespace_illegal_name_error.rs  recall_request.rs
