[package]
name = "memas-sdk"
version = "0.1.0"
authors = ["max.yu@memas.ai"]
description = "This is the Control Plane APIs for MeMaS (Memory Management Service)."
license = "Apache-2.0"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
